More changes to Equipment

--- a/MusicCityAnimalRescueManagement/MusicCityAnimalRescueManagement.csproj
+++ b/MusicCityAnimalRescueManagement/MusicCityAnimalRescueManagement.csproj
@@ -951,6 +951,9 @@
     <Content Include="Views\Home\Todo.cshtml" />
     <Content Include="Views\Equipment\Index.cshtml" />
     <Content Include="Views\Equipment\Edit.cshtml" />
+    <Content Include="Views\Equipment\Create.cshtml" />
+    <Content Include="Views\Equipment\Delete.cshtml" />
+    <Content Include="Views\Equipment\Details.cshtml" />
     <None Include="web.config" />
     <None Include="Web.config.bak" />
     <None Include="Web.config.Debug.bak">
